# CTK-MotionBox

./: CMakeLists.txt
Applications/bismillah/: CMakeLists.txt  bismillah.cpp  target_libraries.cmake
Applications/bismillahApplicationLauncher/: CMakeLists.txt  bismillahLauncher.cpp  startBlueBerryExampleLauncher.bat.in  target_libraries.cmake
Applications/ctkBismillah/: CMakeLists.txt  ctkBismillah.cpp  ctkBismillah.ini  startctkBismillah.bat.in  target_libraries.cmake
CMake/: FindLIBVLC.cmake  MITKConfig.cmake.in  ctkBlockCheckDependencies.cmake  ctkMacroBuildApp.cmake  ctkMacroBuildLib.cmake  mitkFunctionConfigureVisualStudioUserProjectFile.cmake  mitkFunctionCreateBlueBerryApplication.cmake  mitkFunctionCreateProvisioningFile.cmake  mitkMacroGenerateToolsLibrary.cmake
CMakeExternals/: ANN.cmake  CppMicroServices.cmake  ITK.cmake  SkyFramework.cmake  VTK.cmake
Libs/: ctkExport.h.in
Libs/AppUtil/: CMakeLists.txt  QmitkSafeApplication.h  QmitkSafeNotify.h  QmitkSingleApplication.h  files.cmake  mitkBaseApplication.cpp  mitkBaseApplication.h  mitkProvisioningInfo.cpp  mitkProvisioningInfo.h  target_libraries.cmake
Libs/MotionBox/: CMakeLists.txt  files.cmake  target_libraries.cmake
Libs/MotionBox/content/: PageConsole.qml  PanelSettings.qml
Libs/MotionBox/include/controllers/: ControllerCore.h
Libs/MotionBox/include/io/: DataLocal.h  DataOnline.h
Libs/mbilog/: CMakeLists.txt  files.cmake  mbilog.h  mbilogBackendBase.h  mbilogBackendCout.h  mbilogConfig.cmake.in  mbilogLogMessage.h  mbilogTextBackendBase.h  target_libraries.cmake
Libs/mitkAlgorithmsExt/: CMakeLists.txt  files.cmake  target_libraries.cmake
Libs/mitkAlgorithmsExt/src/: mitkGeometryClipImageFilter.cpp  mitkHeightFieldSurfaceClipImageFilter.cpp  mitkImageToUnstructuredGridFilter.cpp  mitkMaskImageFilter.cpp
Libs/mitkAnnotation/: CMakeLists.txt  files.cmake  target_libraries.cmake
Libs/mitkCore/: CMakeLists.txt  files.cmake  mitkImports.cmake  target_libraries.cmake  versionRestriction.cmake
Libs/mitkCore/include/: itkImportMitkImageContainer.h  mitkAbstractAnnotationRenderer.h  mitkAbstractFileIO.h  mitkAbstractFileReader.h  mitkAbstractFileWriter.h  mitkAbstractTransformGeometry.h  mitkAction.h  mitkAnatomicalStructureColorPresets.h  mitkAnnotation.h  mitkAnnotationProperty.h  mitkAnnotationUtils.h  mitkApplicationCursor.h  mitkApplyTransformMatrixOperation.h  mitkArbitraryTimeGeometry.h  mitkBaseController.h  mitkBaseData copy.h  mitkBaseDataSource.h  mitkBaseGeometry.h  mitkBaseProperty.h  mitkBaseRenderer.h  mitkBindDispatcherInteractor.h  mitkCallbackFromGUIThread.h  mitkCameraController.h  mitkCameraRotationController.h  mitkChannelDescriptor.h  mitkClippedSurfaceBoundsCalculator.h  mitkClippingProperty.h  mitkColorProperty.h  mitkCompareImageDataFilter.h  mitkCompositePixelValueToString.h  mitkConvert2Dto3DImageFilter.h  mitkCoreObjectFactory.h  mitkCoreObjectFactoryBase.h  mitkCoreServices.h  mitkCrosshairPositionEvent.h  mitkCustomMimeType.h  mitkDataInteractor.h  mitkDataNode.h  mitkDataNodeSource.h  mitkDataStorage.h  (+231 more)
Libs/mitkCore/src/: mitkCoreActivator.cpp
Libs/mitkCore/src/Algorithms/: mitkCompareImageDataFilter.cpp  mitkCompositePixelValueToString.cpp  mitkHistogramGenerator.cpp  mitkRGBToRGBACastImageFilter.cpp
Libs/mitkCore/src/DataManagement/: mitkAbstractTransformGeometry.cpp  mitkBaseGeometry.cpp  mitkImageCastPart1.cpp  mitkImageCastPart2.cpp  mitkImageCastPart3.cpp  mitkImageCastPart4.cpp  mitkImageStatisticsHolder.cpp
Libs/mitkDataTypesExt/: CMakeLists.txt  files.cmake  target_libraries.cmake
Libs/mitkLegacyGL/: CMakeLists.txt  files.cmake  target_libraries.cmake
Libs/mitkPlanarFigure/: CMakeLists.txt  files.cmake  target_libraries.cmake
Libs/mitkPlanarFigure/autoload/IO/: CMakeLists.txt  files.cmake  target_libraries.cmake
Libs/mitkQtWidgets/: CMakeLists.txt  files.cmake  target_libraries.cmake
Libs/mitkQtWidgets/src/: mitkQtWidgetsActivator.cpp  mitkQtWidgetsActivator.h
Libs/mitkQtWidgetsExt/: CMakeLists.txt  files.cmake  target_libraries.cmake
Libs/mitkQtWidgetsExt/include/: QmitkModuleTableModel.h
Libs/mitkQtWidgetsExt/src/: QmitkModuleTableModel.cpp  QmitkPropertyListPopup.cpp
Libs/mitkSceneSerialization/: CMakeLists.txt  files.cmake  target_libraries.cmake
Libs/mitkSceneSerializationBase/: CMakeLists.txt  files.cmake  target_libraries.cmake
Libs/qtsingleapplication/: CMakeLists.txt  files.cmake  qthandlenewappinstance.cpp  qthandlenewappinstance.h  qtlocalpeer.cpp  qtlocalpeer.h  qtlockedfile.h  qtlockedfile_win.cpp  qtsingleapplication.cpp  qtsingleapplication.h  qtsinglecoreapplication.h  target_libraries.cmake
Plugins/bismillah.dummy.plugin/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml  target_libraries.cmake
Plugins/bismillah.dummy.plugin/src/internal/: DummyActivator.cpp  DummyActivator.h  MediaPerspective.cpp  MediaPerspective.h
Plugins/bismillah.fractal.core/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/org.blueberry.core.commands/: CMakeLists.txt  files.cmake  manifest_headers.cmake
Plugins/org.blueberry.core.expressions/: CMakeLists.txt  files.cmake
Plugins/org.blueberry.core.jobs/: CMakeLists.txt  files.cmake
Plugins/org.blueberry.core.runtime/: CMakeLists.txt  files.cmake  target_libraries.cmake
Plugins/org.blueberry.core.runtime/src/internal/: berryExtensionsParser.h  berryInternalPlatform.cpp  berryRegistryStrategy.cpp
Plugins/org.blueberry.ui.qt/: CMakeLists.txt  files.cmake  target_libraries.cmake
Plugins/org.blueberry.ui.qt.help/: CMakeLists.txt  files.cmake  target_libraries.cmake
Plugins/org.blueberry.ui.qt.log/: CMakeLists.txt  target_libraries.cmake
Plugins/org.blueberry.ui.qt.objectinspector/: CMakeLists.txt
Plugins/org.mitk.core.ext/: CMakeLists.txt  files.cmake  target_libraries.cmake
Utilities/ANN/: CMakeLists.txt
Utilities/ANN/ANN/: CMakeLists.txt
Utilities/ANN/ann_fig/: CMakeLists.txt
Utilities/ANN/ann_knn_01/: CMakeLists.txt  ann_knn_01.cpp
Utilities/ANN/ann_sample/: CMakeLists.txt
Utilities/ANN/ann_test/: CMakeLists.txt
(+137 files in other folders)
